# AGS324

./: .gitignore  README.md  pyproject.toml
.github/workflow/: workflow.yml
.github/workflows/: python-publish.yml  workflow.yml
src/AGS324/: __init__.py  ags4.0.3_standard_dictionary.ags  ags4.0.4_standard_dictionary.ags  ags4.1.1_standard_dictionary.ags  ags4.1_standard_dictionary.ags  ags4.2_standard_dictionary.ags  ags4_standard_headers.json  converter.py  main.py
src/AGS324/ref/: ags3-to-ags4.0.3-semantic-crosswalk.csv  ags3-to-ags4.0.4-semantic-crosswalk.csv  ags3-to-ags4.1.1-semantic-crosswalk.csv  ags3-to-ags4.2-semantic-crosswalk.csv  ags3.references.json  ags4.0.3.references.json  ags4.0.4.references.json  ags4.1.1.references.json  ags4.1.references.json  ags4.references.json
tests/: test_converter.py
